--- a/Registration Form/style.css
+++ b/Registration Form/style.css
@@ -49,6 +49,10 @@
     height: auto;
   }
   
+  input[type=text]:focus {
+    border: 3px solid #9c7d9a;
+   }
+
   #enrolled-students {
     margin-top: 25px;
     margin-bottom: 15px;
@@ -118,7 +122,7 @@
   
   #span{
     text-align: center;
-    margin-left: 10.4rem;
+    margin-left: 14.4rem;
     margin-top: 4rem;
   }
   
